# olio-ohjelmointi

6a/: CMakeLists.txt  main.cpp  myclass.h
H1/: main.cpp
h1_4/: CMakeLists.txt  main.cpp
h2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
h2b/: car.cpp  car.h  main.cpp
h3a/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
h3b/: animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
h4/: car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
h5/: classa1.cpp  classa1.h  classb.cpp  classb.h  main.cpp
h6b/: exampleclass.cpp  exampleclass.h  main.cpp
h7/: mainwindow.cpp  mainwindow.ui
luokka/: CMakeLists.txt  main.cpp  person.h
